// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Properties /> rendering should render properties and matches snapshot (with placeholders) 1`] = `
<DocumentFragment>
  .c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 8px;
}

.c8 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 40px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 16px;
  border-radius: 4px;
  background-color: transparent;
  padding: 2px 1px 2px 1px;
  min-height: 16px;
  border-radius: 0px;
  color: #151515;
}

.c8:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c8:hover:not([disabled]),
.c8:focus-visible:not([disabled]) {
  color: #404040;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: 'Poppins',sans-serif;
  position: relative;
}

.c4 {
  color: #151515;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 16px;
  line-height: 20px;
  margin-bottom: 8px;
}

.c6 {
  color: #151515;
  background-color: #F9F9F9;
  width: 100%;
  max-width: 100%;
  min-width: 100%;
  font-size: 18px;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  line-height: 22px;
  border-radius: 4px;
  border: 1px solid #151515;
  padding: 8px 16px;
  box-sizing: border-box;
  height: 48px;
}

.c6:disabled {
  background: #EEEEEE;
  border: 1px solid #A4A4A4;
}

.c6:invalid {
  border: 2px solid #BC2828;
}

.c6::-webkit-input-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6::-moz-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6:-ms-input-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6::placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6:focus {
  outline: 1px solid #151515;
}

.c5 {
  position: relative;
}

.c0 {
  color: #151515;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 12px;
  color: #151515;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 12px;
  color: #151515;
}

.c7 {
  color: #151515;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 48px;
  right: 0;
  top: 32px;
  position: relative;
  margin-left: -16px;
  -webkit-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

<div>
    <p
      class="c0"
    >
      Properties
    </p>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <label
            class="c4"
            for=""
          >
            Label
          </label>
          <div
            class="c5"
          >
            <input
              aria-invalid="false"
              aria-label="Label"
              class="c6"
              id=""
              name=""
              placeholder="e.g. color"
              value=""
            />
          </div>
        </div>
        <div
          class="c3"
        >
          <label
            class="c4"
            for=""
          >
            Value
          </label>
          <div
            class="c5"
          >
            <input
              aria-invalid="false"
              aria-label="Value"
              class="c6"
              id=""
              name=""
              placeholder="e.g. blue"
              value=""
            />
          </div>
        </div>
        <button
          aria-label="Remove property"
          class="c7"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6L6 18"
              stroke="#151515"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M6 6L18 18"
              stroke="#151515"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      aria-label="Add Row"
      class="c8"
    >
      <span
        class="c9"
      >
        <img
          alt="Add Row icon"
          src="[object Object]"
        />
        Add Row
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Properties /> rendering should render properties and matches snapshot (with title) 1`] = `
<DocumentFragment>
  .c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 8px;
}

.c8 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 40px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 16px;
  border-radius: 4px;
  background-color: transparent;
  padding: 2px 1px 2px 1px;
  min-height: 16px;
  border-radius: 0px;
  color: #151515;
}

.c8:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c8:hover:not([disabled]),
.c8:focus-visible:not([disabled]) {
  color: #404040;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: 'Poppins',sans-serif;
  position: relative;
}

.c4 {
  color: #151515;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 16px;
  line-height: 20px;
  margin-bottom: 8px;
}

.c6 {
  color: #151515;
  background-color: #F9F9F9;
  width: 100%;
  max-width: 100%;
  min-width: 100%;
  font-size: 18px;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  line-height: 22px;
  border-radius: 4px;
  border: 1px solid #151515;
  padding: 8px 16px;
  box-sizing: border-box;
  height: 48px;
}

.c6:disabled {
  background: #EEEEEE;
  border: 1px solid #A4A4A4;
}

.c6:invalid {
  border: 2px solid #BC2828;
}

.c6::-webkit-input-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6::-moz-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6:-ms-input-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6::placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6:focus {
  outline: 1px solid #151515;
}

.c5 {
  position: relative;
}

.c0 {
  color: #151515;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 12px;
  color: #151515;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 12px;
  color: #151515;
}

.c7 {
  color: #151515;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 48px;
  right: 0;
  top: 32px;
  position: relative;
  margin-left: -16px;
  -webkit-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

<div>
    <p
      class="c0"
    >
      Custom title
    </p>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <label
            class="c4"
            for=""
          >
            Label
          </label>
          <div
            class="c5"
          >
            <input
              aria-invalid="false"
              aria-label="Label"
              class="c6"
              id=""
              name=""
              value=""
            />
          </div>
        </div>
        <div
          class="c3"
        >
          <label
            class="c4"
            for=""
          >
            Value
          </label>
          <div
            class="c5"
          >
            <input
              aria-invalid="false"
              aria-label="Value"
              class="c6"
              id=""
              name=""
              value=""
            />
          </div>
        </div>
        <button
          aria-label="Remove property"
          class="c7"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6L6 18"
              stroke="#151515"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M6 6L18 18"
              stroke="#151515"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      aria-label="Add Row"
      class="c8"
    >
      <span
        class="c9"
      >
        <img
          alt="Add Row icon"
          src="[object Object]"
        />
        Add Row
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Properties /> rendering should render properties and matches snapshot 1`] = `
<DocumentFragment>
  .c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  line-height: 1;
  gap: 8px;
}

.c8 {
  text-align: center;
  border: none;
  outline: none;
  overflow: hidden;
  cursor: pointer;
  pointer-events: auto;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-height: 40px;
  font-weight: 600;
  padding: 0 28px;
  font-size: 16px;
  border-radius: 4px;
  background-color: transparent;
  padding: 2px 1px 2px 1px;
  min-height: 16px;
  border-radius: 0px;
  color: #151515;
}

.c8:disabled {
  opacity: 20%;
  cursor: default;
  pointer-events: none;
}

.c8:hover:not([disabled]),
.c8:focus-visible:not([disabled]) {
  color: #404040;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-family: 'Poppins',sans-serif;
  position: relative;
}

.c4 {
  color: #151515;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  font-size: 16px;
  line-height: 20px;
  margin-bottom: 8px;
}

.c6 {
  color: #151515;
  background-color: #F9F9F9;
  width: 100%;
  max-width: 100%;
  min-width: 100%;
  font-size: 18px;
  font-family: 'Poppins',sans-serif;
  font-weight: 600;
  line-height: 22px;
  border-radius: 4px;
  border: 1px solid #151515;
  padding: 8px 16px;
  box-sizing: border-box;
  height: 48px;
}

.c6:disabled {
  background: #EEEEEE;
  border: 1px solid #A4A4A4;
}

.c6:invalid {
  border: 2px solid #BC2828;
}

.c6::-webkit-input-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6::-moz-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6:-ms-input-placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6::placeholder {
  color: #A4A4A4;
  font-size: 18px;
  font-weight: 400;
}

.c6:focus {
  outline: 1px solid #151515;
}

.c5 {
  position: relative;
}

.c0 {
  color: #151515;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 12px;
  color: #151515;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 12px;
  color: #151515;
}

.c7 {
  color: #151515;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 48px;
  right: 0;
  top: 32px;
  position: relative;
  margin-left: -16px;
  -webkit-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

<div>
    <p
      class="c0"
    >
      Properties
    </p>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <label
            class="c4"
            for=""
          >
            Label
          </label>
          <div
            class="c5"
          >
            <input
              aria-invalid="false"
              aria-label="Label"
              class="c6"
              id=""
              name=""
              value=""
            />
          </div>
        </div>
        <div
          class="c3"
        >
          <label
            class="c4"
            for=""
          >
            Value
          </label>
          <div
            class="c5"
          >
            <input
              aria-invalid="false"
              aria-label="Value"
              class="c6"
              id=""
              name=""
              value=""
            />
          </div>
        </div>
        <button
          aria-label="Remove property"
          class="c7"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6L6 18"
              stroke="#151515"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M6 6L18 18"
              stroke="#151515"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      aria-label="Add Row"
      class="c8"
    >
      <span
        class="c9"
      >
        <img
          alt="Add Row icon"
          src="[object Object]"
        />
        Add Row
      </span>
    </button>
  </div>
</DocumentFragment>
`;
